# selenium-boilerplate

./: application.py  crawl.py  excel.py  main.py  pyproject.toml
