[tool.poetry]
name = "selenium-boilerplate"
version = "0.1.0"
description = ""
authors = ["y00njae <rladbswo12@gist.ac.kr>"]
readme = "README.md"
packages = [{include = "selenium_boilerplate"}]

[tool.poetry.dependencies]
python = "^3.11"
webdriver-manager = "^3.8.6"
selenium = "^4.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
