[tool.poetry]
name = "code"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
numpy = "1.26.0"
pandas = "2.1.3"
python-dateutil = "2.8.2"
pytz = "2023.3.post1"
six = "1.16.0"
packaging = "23.2"
protobuf = "4.21.12"
tzdata = "2023.3"
typing-extensions = "4.8.0"
matplotlib = "3.8.0"
scipy = "1.11.3"
altgraph = "0.17.4"
greenlet = "3.0.0"
macholib = "1.16.3"
mysql-connector-python = "8.1.0"
psgcompiler = "1.6.1"
pyinstaller = "6.1.0"
pyinstaller-hooks-contrib = "2023.10"
pysimplegui = "4.60.5"
sqlalchemy = "2.0.22"
tk = "0.1.0"
requests = "^2.31.0"
openpyxl = "^3.1.2"
selenium = "^4.16.0"
webdriver-manager = "^4.0.1"
black = "^23.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
